--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "BRTLibrary"]
 	path = BRTLibrary
 	url = https://github.com/GrupoDiana/BRTLibrary.git
+[submodule "third_party_libraries/rtaudio"]
+	path = third_party_libraries/rtaudio
+	url = https://github.com/thestk/rtaudio.git
