feat: Implements circular moving source

--- a/brtLibrary_tester/projects/vstudio/BRTLibrary.vcxproj
+++ b/brtLibrary_tester/projects/vstudio/BRTLibrary.vcxproj
@@ -66,6 +66,9 @@
     <ClInclude Include="..\..\..\BRTLibrary\include\third_party_libraries\libmysofa\include\mysofa.h" />
     <ClInclude Include="..\..\..\BRTLibrary\include\third_party_libraries\nlohmann\json.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\BRTLibrary\include\ServiceModules\HRTFTester.hpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -163,7 +166,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
